# poulpy-pir

./: 2025-1352-collapse-notes.md  Cargo.toml  INTERPOLATION_BUG_REPORT.md  README.md  RECURSION_RAM_MODEL.md  sequential-keyswitch-mask-precompute-plan.md  table2_db_parameters.md
.cargo/: config.toml
benches/: strict_collapse.rs
benches/mask_product/: main.rs
benches/packing/: main.rs
benches/poly_eval/: main.rs
docs/: dft-hot-collapse-automorphism-and-bsgs-report.md  packing-plain-automorphism-keys.md  pir-end-to-end.md
examples/: avx512_end_to_end.rs  pack_then_horner.rs  pir.rs
src/: circuit.rs  client.rs  config.rs  database.rs  encoding.rs  lib.rs  parallel.rs  parameters.rs  payload.rs  query.rs  serialization.rs  server.rs  test_oracle.rs
src/circuit/: aggregate.rs  collapse.rs  collapse_precompute.rs  pack.rs
src/client/: core.rs  mod.rs  recursion.rs  seed.rs  state.rs
src/database/: address.rs  coeff_matrix.rs  database.rs  layout.rs  mod.rs  preprocessing.rs  storage.rs
src/interpolation/: api.rs  default.rs  delegates.rs  mod.rs  oep.rs  strategy.rs
src/interpolation/tests/: horner_rgsw_selects_root_point.rs  interpolate_columns_independent.rs  interpolate_horner_selects_root_point.rs  interpolate_round_trips.rs  mod.rs
src/packing/: aggregate.rs  api.rs  bsgs_pack.rs  collapse_precompute.rs  default.rs  delegates.rs  key_precompute.rs  mod.rs  oep.rs  packing.rs  packing_keys.rs  packing_mask_preprocessing.rs  packing_precomputations.rs  recursion.rs
src/packing/tests/: aggregate_decrypts_expanded_glwe_ciphertext.rs  aggregate_general_input.rs  aggregate_uses_lwe_matrix_mask_rows.rs  mod.rs  pack.rs  pack_with_u.rs  partial_pack.rs
src/server/: api.rs  common.rs  default.rs  delegates.rs  gemm.rs  mod.rs  oep.rs
src/server/interpolation/: mod.rs  offline.rs  online.rs  setup.rs
src/server/recursion/: keys.rs  mod.rs  offline.rs  online.rs  packing.rs  params.rs  setup.rs
src/server/recursion/tests/: end_to_end.rs  first_level.rs  mod.rs  partial_pack.rs  second_level.rs
src/tests/: aggregate_decrypts_expanded_glwe_ciphertext.rs  aggregate_uses_lwe_matrix_mask_rows.rs  common.rs  database_encode_u256_shard.rs  database_layout.rs  mod.rs  mod_p_encoder.rs  mod_p_one_hot.rs  serialization_roundtrip.rs  server_batch.rs  server_roundtrip.rs
tests/: mod.rs
tests/cases/: aggregate_decrypts_expanded_glwe_ciphertext.rs  aggregate_uses_lwe_matrix_mask_rows.rs  dft_accumulated_precompute_decrypts.rs  fixed_mask_1x1_vmp_addend_matches_reference.rs  precompute_mask_state_matches_split_baseline.rs  precomputed_sequential_collapse_decrypts.rs  precomputed_sequential_collapse_matches_split_baseline.rs  prepared_vmp_pmat_is_immutable_and_dimensioned.rs  sequential_keyswitch_collapse_aggregate_mask.rs  sequential_keyswitch_collapse_split_matches_full.rs
tests/support/: common.rs
