[package]
name = "poulpy-pir"
version = "0.1.0"
edition = "2024"

[dependencies]
getrandom = "0.4"
private-gemm-x86 = { version = "=0.1.20", default-features = false }
poulpy-core = { path = "../poulpy/poulpy-core" }
poulpy-hal = { path = "../poulpy/poulpy-hal" }
poulpy-cpu-ref = { path = "../poulpy/poulpy-cpu-ref", features = ["enable-core"] }
poulpy-cpu-avx = { path = "../poulpy/poulpy-cpu-avx", features = ["enable-avx"] }

[[bench]]
name = "packing"
path = "benches/packing/main.rs"
harness = false

[[bench]]
name = "poly_eval"
path = "benches/poly_eval/main.rs"
harness = false

[[bench]]
name = "mask_product"
path = "benches/mask_product/main.rs"
harness = false

[dev-dependencies]
# Re-declared (also a normal dependency) so the self-contained `mask_product`
# bench can drive the same f64 GEMM kernel the server uses.
private-gemm-x86 = { version = "=0.1.20", default-features = false }
