[package]
name = "poulpy-pir"
version = "0.1.0"
edition = "2024"

[dependencies]
getrandom = "0.4"
private-gemm-x86 = { version = "=0.1.20", default-features = false }
# Pinned: poulpy-pir is adapted to this exact poulpy commit. Pinning isolates it
# from poulpy `main` drift; bump the rev deliberately when migrating to a newer
# poulpy (and update poulpy-pir to match its API).
poulpy-core = { git = "https://github.com/poulpy-fhe/poulpy", rev = "f1dc3d4e04394ce9cba2aa396cc0fe19be4645ed" }
poulpy-hal = { git = "https://github.com/poulpy-fhe/poulpy", rev = "f1dc3d4e04394ce9cba2aa396cc0fe19be4645ed" }
poulpy-cpu-ref = { git = "https://github.com/poulpy-fhe/poulpy", rev = "f1dc3d4e04394ce9cba2aa396cc0fe19be4645ed", features = ["enable-core"] }
poulpy-cpu-avx = { git = "https://github.com/poulpy-fhe/poulpy", rev = "f1dc3d4e04394ce9cba2aa396cc0fe19be4645ed", features = ["enable-avx"] }
# AVX-512 FHE backend (FFT64Avx512). Optional and never named in the library —
# only the `avx512_end_to_end` example (a run-site "binary") imports it, gated by
# the `avx512-fhe` feature. `enable-avx512f` suffices (FFT64Avx512 needs only
# AVX-512F). NOTE: this crate has a compile-time guard requiring
# `RUSTFLAGS="-C target-feature=+avx512f"`, so it only *builds* on an AVX-512F host.
poulpy-cpu-avx512 = { git = "https://github.com/poulpy-fhe/poulpy", rev = "f1dc3d4e04394ce9cba2aa396cc0fe19be4645ed", features = ["enable-avx512f"], optional = true }

[features]
# Pulls in the optional AVX-512 FHE backend for the `avx512_end_to_end` example.
# Build/run on an AVX-512F host with:
#   RUSTFLAGS="-C target-feature=+avx512f" cargo run --release --features avx512-fhe --example avx512_end_to_end
avx512-fhe = ["dep:poulpy-cpu-avx512"]

[[example]]
name = "avx512_end_to_end"
path = "examples/avx512_end_to_end.rs"
required-features = ["avx512-fhe"]

[[bench]]
name = "packing"
path = "benches/packing/main.rs"
harness = false

[[bench]]
name = "poly_eval"
path = "benches/poly_eval/main.rs"
harness = false

[[bench]]
name = "mask_product"
path = "benches/mask_product/main.rs"
harness = false

[dev-dependencies]
# Re-declared (also a normal dependency) so the self-contained `mask_product`
# bench can drive the same f64 GEMM kernel the server uses.
private-gemm-x86 = { version = "=0.1.20", default-features = false }
